# cleardeskai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
landing/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_utils.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: ai_status.rs  history.rs  license.rs  mod.rs  organize.rs  scan.rs  settings.rs  watch.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/rules/: context.rs  mod.rs
src/components/: ErrorBoundary.tsx
src/components/dashboard/: Dashboard.tsx
src/components/history/: HistoryView.tsx
src/components/layout/: Sidebar.tsx
src/components/onboarding/: OnboardingView.tsx
src/components/scan/: ScanView.tsx
src/components/settings/: SettingsView.tsx
src/components/toast/: ToastProvider.tsx
src/components/watch/: WatchPanel.tsx
src/stores/: appStore.ts
src/styles/: globals.css
